# FAHIM_Autonomous_Mobile_Robot

./: README.md
Arduino_code/: Arduino_code.ino
Jetson_ROS/FAHIM/src/my_robot_bringup/: package.xml  setup.py
Jetson_ROS/FAHIM/src/my_robot_bringup/config/: ekf.yaml  nav2_params.yaml  realsense.yaml  rtabmap.yaml
Jetson_ROS/FAHIM/src/my_robot_bringup/launch/: nav2.launch.py  robot.launch.py  rviz.launch.py  slam.launch.py
Jetson_ROS/FAHIM/src/my_robot_description/: package.xml  setup.py
Jetson_ROS/FAHIM/src/my_robot_description/launch/: display.launch.py
Jetson_ROS/FAHIM/src/my_robot_description/meshes/: robot_body.stl
Jetson_ROS/FAHIM/src/my_robot_description/rviz/: my_robot.rviz
Jetson_ROS/FAHIM/src/my_robot_description/urdf/: core.xacro  materials.xacro  my_robot.urdf.xacro  sensors.xacro
Jetson_ROS/FAHIM/src/my_robot_hardware/: package.xml  setup.py
Jetson_ROS/FAHIM/src/my_robot_hardware/my_robot_hardware/: arduino_bridge.py  imu_node.py
Jetson_ROS/FAHIM/src/my_robot_vision/: package.xml  setup.py
Jetson_ROS/FAHIM/src/my_robot_vision/launch/: yolo.launch.py
Jetson_ROS/FAHIM/src/my_robot_vision/my_robot_vision/: yolo_node.py
