<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_hardware</name>
  <version>0.1.0</version>
  <description>FAHIM low-level hardware bridge — Arduino Nano (motors + encoders) and MPU6050 IMU</description>
  <maintainer email="aa.k4132@gmail.com">robot26</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Python dependencies pulled in via rosdep (keys from rosdistro) -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
